# black_hole_simulation

./: .gitmodules  CMakeLists.txt  README.md  config.h  geodesic.comp  main.cpp  shader.cpp
